Bumped ShadowJAR, JUnit, JLine3 Dependencies